Improve whole plugin

--- a/page1.html
+++ b/page1.html
@@ -11,10 +11,12 @@
         <script src="script.min.js"></script>
     </head>
     <body>
-        <div class="navigation">
-            <a href="page1.html">page1.html</a> <a href="page2.html">page2.html</a>
-            <a href="page2.html#foo">page2.html#foo</a> <a href="page2.html#bar">page2.html#bar</a>
-            <a href="page2.html#baz">page2.html#baz</a>
+        <div class="container">
+            <div class="navigation">
+                <a href="page1.html">page1.html</a> <a href="page2.html">page2.html</a>
+                <a href="page2.html#foo">page2.html#foo</a> <a href="page2.html#bar">page2.html#bar</a>
+                <a href="page2.html#baz">page2.html#baz</a>
+            </div>
         </div>
     </body>
 </html>
