--- a/page2.html
+++ b/page2.html
@@ -11,15 +11,17 @@
         <script src="script.min.js"></script>
     </head>
     <body>
-        <div class="navigation">
-            <a href="page1.html">page1.html</a> <a href="page2.html">page2.html</a>
-            <a href="page2.html#foo">page2.html#foo</a> <a href="page2.html#bar">page2.html#bar</a>
-            <a href="page2.html#baz">page2.html#baz</a>
-        </div>
-        <div class="modules">
-            <div class="module module--1" data-scrollanchor-target="foo"></div>
-            <div class="module module--2" data-scrollanchor-target="bar"></div>
-            <div class="module module--3" data-scrollanchor-target="baz"></div>
+        <div class="container">
+            <div class="navigation">
+                <a href="page1.html">page1.html</a> <a href="page2.html">page2.html</a>
+                <a href="page2.html#foo">page2.html#foo</a> <a href="page2.html#bar">page2.html#bar</a>
+                <a href="page2.html#baz">page2.html#baz</a>
+            </div>
+            <div class="modules">
+                <div class="module module--1" data-scrollanchor-target="foo"></div>
+                <div class="module module--2" data-scrollanchor-target="bar"></div>
+                <div class="module module--3" data-scrollanchor-target="baz"></div>
+            </div>
         </div>
     </body>
 </html>
